package com.carshowroom.mycar_showroom.entity;

public enum CarStatus {
    AVAILABLE,
    SOLD,
    MAINTENANCE
}
